added a test field

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Document</title>
+    <title>SNAKE-HOME</title>
 
     <!-- tailwind -->
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
@@ -77,12 +77,24 @@ flex flex-col justify-evenly items-center
                 </p>
             </div>
 
-            <div id="settings" class="
+            <div id="links" class="
             " >
-                <a href="">
-                    <i class="fa-solid fa-gear text-[30px] md:text-[45px]" id="settingIcon"></i>
+
+                <a href="" id="settings">
+                    <i class="fa-solid fa-gear 
+                    text-[30px] md:text-[45px]
+                    mx-[20px]" id="settingIcon"></i>
                 </a>
+
+                <a href="" id="stats">
+                    <i class="fa-solid fa-chart-simple 
+                    text-[30px] md:text-[45px]
+                    mx-[20px]" id="settingIcon"></i>
+                </a>
+
             </div>
+
+        
 
         </div>
 
