--- a/settings.html
+++ b/settings.html
@@ -11,9 +11,9 @@
         <h2>Color Selection:</h2>
         <!--Toggles between colors for both the snake and background color-->
         <div id="container">
-            <input type="radio" id="colorsel1" name="colorselect" value="1"><br>
-            <input type="radio" id="colorsel2" name="colorselect" value="2"><br>
-            <input type="radio" id="colorsel3" name="colorselect" value="3"><br>
+            <p>Reddish Pink background with light blue snake:<input type="radio" id="colorsel1" name="colorselect" value="1"><br></p>
+            <p>Blue background with black snake:<input type="radio" id="colorsel2" name="colorselect" value="2"><br></p>
+            <p>Orange background with blue snake:<input type="radio" id="colorsel3" name="colorselect" value="3"><br></p>
         </div>
     </section>
     <section id="volume">
@@ -27,5 +27,7 @@
         <p>On:<input type="radio" id="soundon" name="sound" value="on2"></p>
         <p>Off:<input type="radio" id="soundoff" name="sound" value="off2"></p>
     </section>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
