working on movement

--- a/TestField.html
+++ b/TestField.html
@@ -3,13 +3,331 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title> <link rel="stylesheet" href="TestField.css">
+    <script
+    src="https://code.jquery.com/jquery-3.7.1.js"
+    integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+    crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.0/themes/smoothness/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
 </head>
 <body>
-    <div class="col1">
+      <div class="cont">
         <div class="row1">
-
+1
+        </div>
+        <div class="row2">
+2
+        </div>
+        <div class="row3">
+3
+        </div>
+        <div class="row4">
+4
+        </div>
+        <div class="row5">
+5
+        </div>
+        <div class="row6">
+6
+        </div>
+        <div class="row7">
+7
+        </div>
+        <div class="row8">
+8
+        </div>
+        <div class="row9">
+9
+        </div>
+        <div class="row10">
+10
+        </div>
+        <div class="row11">
+11
+        </div>
+        <div class="row12">
+12
+        </div>
+        <div class="row13">
+13
+        </div>
+        <div class="row14">
+14
+        </div>
+        <div class="row15">
+15
+        </div>
+        <div class="row16">
+16
+        </div>
+        <div class="row17">
+17
+        </div>
+        <div class="row18">
+18
+        </div>
+        <div class="row19">
+19
+        </div>
+        <div class="row20">
+20
+        </div>
+        <div class="row21">
+21
+        </div>
+        <div class="row22">
+22
+        </div>
+        <div class="row23">
+23
+        </div>
+        <div class="row24">
+24
+        </div>
+        <div class="row25">
+25
+        </div>
+        <div class="row26">
+26
+        </div>
+        <div class="row27">
+27
+        </div>
+        <div class="row28">
+28
+        </div>
+        <div class="row29">
+29
+        </div>
+        <div class="row30">
+30
+        </div>
+        <div class="row31">
+31
+        </div>
+        <div class="row32">
+32
+        </div>
+        <div class="row33">
+33
+        </div>
+        <div class="row34">
+34
+        </div>
+        <div class="row35">
+35
+        </div>
+        <div class="row36">
+36
+        </div>
+        <div class="row37">
+37
+        </div>
+        <div class="row38">
+38
+        </div>
+        <div class="row39">
+39
+        </div>
+        <div class="row40">
+40
+        </div>
+        <div class="row41">
+41
+        </div>
+        <div class="row42">
+42
+        </div>
+        <div class="row43">
+43
+        </div>
+        <div class="row44">
+44
+        </div>
+        <div class="row45">
+45
+        </div>
+        <div class="row46">
+46
+        </div>
+        <div class="row47">
+47
+        </div>
+        <div class="row48">
+48
+        </div>
+        <div class="row49">
+49
+        </div>
+        <div class="row50">
+50
+        </div>
+        <div class="row51">
+51
+        </div>
+        <div class="row52">
+<!-- 52 -->
+            <img src="snake assets/tail_left.svg">
+        </div>
+        <div class="row53">
+<!-- 53 -->
+            <img src="snake assets/body_horizontal.svg">
+        </div>
+        <div class="row54">
+<!-- 54 -->
+<img src="snake assets/head_right.svg">
+        </div>
+        <div class="row55">
+55
+        </div>
+        <div class="row56">
+56
+        </div>
+        <div class="row57">
+57
+        </div>
+        <div class="row58">
+58
+        </div>
+        <div class="row59">
+59
+        </div>
+        <div class="row60">
+60
+        </div>
+        <div class="row61">
+61
+        </div>
+        <div class="row62">
+62
+        </div>
+        <div class="row63">
+63
+      </div>
+        <div class="row64">
+64
+        </div>
+        <div class="row65">
+65
+        </div>
+        <div class="row66">
+66
+        </div>
+        <div class="row67">
+67
+        </div>
+        <div class="row68">
+68
+        </div>
+        <div class="row69">
+69
+        </div>
+        <div class="row70">
+70
+        </div>
+        <div class="row71">
+71
+        </div>
+        <div class="row72">
+72
+        </div>
+        <div class="row73">
+73
+        </div>
+        <div class="row74">
+74
+        </div>
+        <div class="row75">
+75
+        </div>
+        <div class="row76">
+76
+        </div>
+        <div class="row77">
+77
+        </div>
+        <div class="row78">
+78
+        </div>
+        <div class="row79">
+79
+        </div>
+        <div class="row80">
+80
+        </div>
+        <div class="row81">
+81
+        </div>
+        <div class="row82">
+82
+        </div>
+        <div class="row83">
+83
+        </div>
+        <div class="row84">
+84
+        </div>
+        <div class="row85">
+85
+        </div>
+        <div class="row86">
+86
+        </div>
+        <div class="row87">
+87
+        </div>
+        <div class="row88">
+88
+        </div>
+        <div class="row89">
+89
+        </div>
+        <div class="row90">
+90
+        </div>
+        <div class="row91">
+91
+        </div>
+        <div class="row92">
+92
+        </div>
+        <div class="row93">
+93
+        </div>
+        <div class="row94">
+94
+        </div>
+        <div class="row95">
+95
+        </div>
+        <div class="row96">
+96
+        </div>
+        <div class="row97">
+97
+        </div>
+        <div class="row98">
+98
+        </div>
+        <div class="row99">
+99
+        </div>
+        <div class="row100">
+100
         </div>
     </div>
 </body>
+<script >
+  function movement(key){
+    if (key == 39){
+        $("body").css("color", "red")
+    }
+  }
+    $(document).ready(function() {
+        $("body").keydown(movement(event.key))
+        
+});
+</script>
 </html>
