push auto populate field with snake

--- a/TestField.html
+++ b/TestField.html
@@ -11,11 +11,312 @@
     <link rel="stylesheet" href="./style/textfield.css">
 </head>
 <body>
-    <div class="col1">
-        <div class="row1">
-
+        <body>
+                <div class="cont">
+                  <div class="1">
+          1
+                  </div>
+                  <div class="2">
+          2
+                  </div>
+                  <div class="3">
+          3
+                  </div>
+                  <div class="4">
+          4
+                  </div>
+                  <div class="5">
+          5
+                  </div>
+                  <div class="6">
+          6
+                  </div>
+                  <div class="7">
+          7
+                  </div>
+                  <div class="8">
+          8
+                  </div>
+                  <div class="9">
+          9
+                  </div>
+                  <div class="10">
+          10
+                  </div>
+                  <div class="11">
+          11
+                  </div>
+                  <div class="12">
+          12
+                  </div>
+                  <div class="13">
+          13
+                  </div>
+                  <div class="14">
+          14
+                  </div>
+                  <div class="15">
+          15
+                  </div>
+                  <div class="16">
+          16
+                  </div>
+                  <div class="17">
+          17
+                  </div>
+                  <div class="18">
+          18
+                  </div>
+                  <div class="19">
+          19
+                  </div>
+                  <div class="20">
+          20
+                  </div>
+                  <div class="21">
+          21
+                  </div>
+                  <div class="22">
+          22
+                  </div>
+                  <div class="23">
+          23
+                  </div>
+                  <div class="24">
+          24
+                  </div>
+                  <div class="25">
+          25
+                  </div>
+                  <div class="26">
+          26
+                  </div>
+                  <div class="27">
+          27
+                  </div>
+                  <div class="28">
+          28
+                  </div>
+                  <div class="29">
+          29
+                  </div>
+                  <div class="30">
+          30
+                  </div>
+                  <div class="31">
+          31
+                  </div>
+                  <div class="32">
+          32
+                  </div>
+                  <div class="33">
+          33
+                  </div>
+                  <div class="34">
+          34
+                  </div>
+                  <div class="35">
+          35
+                  </div>
+                  <div class="36">
+          36
+                  </div>
+                  <div class="37">
+          37
+                  </div>
+                  <div class="38">
+          38
+                  </div>
+                  <div class="39">
+          39
+                  </div>
+                  <div class="40">
+          40
+                  </div>
+                  <div class="41">
+          41
+                  </div>
+                  <div class="42">
+          42
+                  </div>
+                  <div class="43">
+          43
+                  </div>
+                  <div class="44">
+          44
+                  </div>
+                  <div class="45">
+          45
+                  </div>
+                  <div class="46">
+          46
+                  </div>
+                  <div class="47">
+          47
+                  </div>
+                  <div class="48">
+          48
+                  </div>
+                  <div class="49">
+          49
+                  </div>
+                  <div class="50">
+          50
+                  </div>
+                  <div class="51">
+          51
+                  </div>
+                  <div class="52">
+          <!-- 52 -->
+                      <img src="snake assets/tail_left.svg" class="tail">
+                  </div>
+                  <div class="53">
+          <!-- 53 -->
+          <img src="snake assets/body_horizontal.svg" class="body">
         </div>
-    </div>
+                  <div class="54">
+          <!-- 54 -->
+          <img src="snake assets/head_right.svg" class="head">
+                  </div>
+                  <div class="55">
+          55
+                  </div>
+                  <div class="56">
+          56
+                  </div>
+                  <div class="57">
+          57
+                  </div>
+                  <div class="58">
+          58
+                  </div>
+                  <div class="59">
+          59
+                  </div>
+                  <div class="60">
+          60
+                  </div>
+                  <div class="61">
+          61
+                  </div>
+                  <div class="62">
+          62
+                  </div>
+                  <div class="63">
+          63
+                </div>
+                  <div class="64">
+          64
+                  </div>
+                  <div class="65">
+          65
+                  </div>
+                  <div class="66">
+          66
+                  </div>
+                  <div class="67">
+          67
+                  </div>
+                  <div class="68">
+          68
+                  </div>
+                  <div class="69">
+          69
+                  </div>
+                  <div class="70">
+          70
+                  </div>
+                  <div class="71">
+          71
+                  </div>
+                  <div class="72">
+          72
+                  </div>
+                  <div class="73">
+          73
+                  </div>
+                  <div class="74">
+          74
+                  </div>
+                  <div class="75">
+          75
+                  </div>
+                  <div class="76">
+          76
+                  </div>
+                  <div class="77">
+          77
+                  </div>
+                  <div class="78">
+          78
+                  </div>
+                  <div class="79">
+          79
+                  </div>
+                  <div class="80">
+          80
+                  </div>
+                  <div class="81">
+          81
+                  </div>
+                  <div class="82">
+          82
+                  </div>
+                  <div class="83">
+          83
+                  </div>
+                  <div class="84">
+          84
+                  </div>
+                  <div class="85">
+          85
+                  </div>
+                  <div class="86">
+          86
+                  </div>
+                  <div class="87">
+          87
+                  </div>
+                  <div class="88">
+          88
+                  </div>
+                  <div class="89">
+          89
+                  </div>
+                  <div class="90">
+          90
+                  </div>
+                  <div class="91">
+          91
+                  </div>
+                  <div class="92">
+          92
+                  </div>
+                  <div class="93">
+          93
+                  </div>
+                  <div class="94">
+          94
+                  </div>
+                  <div class="95">
+          95
+                  </div>
+                  <div class="96">
+          96
+                  </div>
+                  <div class="97">
+          97
+                  </div>
+                  <div class="98">
+          98
+                  </div>
+                  <div class="99">
+          99
+                  </div>
+                  <div class="100">
+          100
+                  </div>
+              </div>
 </body>
 <script>
 
