--- a/TestField.html
+++ b/TestField.html
@@ -320,7 +320,7 @@
 
 $(document).ready(function() {  
 
-
+// puts all the svg files into variables for easy use
 
 
 var head_right = "snake assets/head_right.svg";    
@@ -348,15 +348,14 @@ var tail_down = "snake assets/tail_down.svg";
 
 
 
-
 var direction = "right";      
 var lastDirection = "right";      
-var tailDirection = "right";      
+var tailDirection = "left";      
 var moving = false;      
 var snake = [54, 52, 53];      
 
 
-
+// finds the direction and the way the snake is gonna trn and puts the right turn property based on last direction
 
 function getCurve(past, direction) {    
 
@@ -397,7 +396,7 @@ if (past == "down" && direction == "right"){
 }  
 
 
-
+// function to be continously called on with set interval to move the snake
 
 function moveSnake() {      
 
@@ -414,7 +413,7 @@ function moveSnake() {
   var newHeadLoc = headLoc;    
 
 
-
+// sets boundarys by using math to determine if its gonnna be at the edge or not
 
   if (direction == "right") {      
     newHeadLoc = headLoc + 1;      
@@ -434,7 +433,7 @@ function moveSnake() {
 
   if (direction == "up") {      
     newHeadLoc = headLoc - 10;      
-    if (newHeadLoc < 1) {      
+    if (newHeadLoc <= 1) {      
       clearInterval(moving);      
     }      
   }    
@@ -462,6 +461,7 @@ function moveSnake() {
   var bodyImg = "";      
 
 
+//   makes it so that when you make a change in direction it gets the right body curve 
   if (lastDirection != direction) {      
     bodyImg = getCurve(lastDirection, direction);      
     if (bodyImg == "") {      
@@ -473,12 +473,12 @@ function moveSnake() {
 
 
 
-
+// keeps updating body if there is no change in button 
   $("." + headLoc).html('<img src="' + bodyImg + '" class="body">');      
 
 
 
-
+// changes head based no direction
   if (direction == "right") {      
     $("." + newHeadLoc).html('<img src="' + head_right + '" class="head">');      
   }    
@@ -515,7 +515,7 @@ function moveSnake() {
 
     if (beforeTail - newTailLoc == 10) {      
       newTailImg = tail_up;   
-      clearInterval(moving)   
+        
     }    
 
 
@@ -529,7 +529,7 @@ function moveSnake() {
 
 
 
-
+// sets tail direction and previos direction to determine how the snake moves
   tailDirection = lastDirection;      
   lastDirection = direction;      
 
@@ -548,7 +548,7 @@ $(document).keydown(function(event) {
 
 
 
-
+// makes the changes and changes the direction also makes sure you cant keep pressing the same button to go faster
   if (event.keyCode === 39) {      
     if (direction != "left") {      
       direction = "right";      
