made color change save to settings site and changed music file

--- a/settings.html
+++ b/settings.html
@@ -24,7 +24,9 @@
         <p>Off:<input type="radio" id="musicoff" name="music" value="off1"></p>
         <h3>Sound Effects</h3>
         <!--Toggles other sound effects-->
-        <p>On:<input type="radio" id="soundon" name="sound" value="on2"></p>
+        <p>On:
+            <input type="radio" id="soundon" name="sound" value="on2">
+        </p>
         <p>Off:<input type="radio" id="soundoff" name="sound" value="off2"></p>
     </section>
     <section id="links">
