file name change

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ flex flex-col justify-evenly items-center
             <div id="links" class="
             " >
 
-                <a href="" id="settings">
+                <a href="./settings.html" id="settings">
                     <i class="fa-solid fa-gear 
                     text-[30px] md:text-[45px]
                     mx-[20px]" id="settingIcon"></i>
@@ -127,5 +127,6 @@ flex flex-col justify-evenly items-center
 
         })
     </script>
+    <script src="settings.js"></script>
 </body>
 </html>
