working audio buy playback is an issue

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ flex flex-col justify-evenly items-center
         text-green-800
         ">start</span>
     </a>
-
+    <audio src="./audio/music.mp3" preload="auto" id="music"></audio>
 
     <script>
         $(document).ready(function(){
