--- a/settings.html
+++ b/settings.html
@@ -22,11 +22,10 @@
         <!--Toggles music-->
         <p>On:<input type="radio" id="musicon" name="music" value="on1"></p>
         <p>Off:<input type="radio" id="musicoff" name="music" value="off1"></p>
+        <audio src="./audio/music.mp3" preload="auto" id="music"></audio>
         <h3>Sound Effects</h3>
         <!--Toggles other sound effects-->
-        <p>On:
-            <input type="radio" id="soundon" name="sound" value="on2">
-        </p>
+        <p>On:<input type="radio" id="soundon" name="sound" value="on2"></p>
         <p>Off:<input type="radio" id="soundoff" name="sound" value="off2"></p>
     </section>
     <section id="links">
