--- a/testhtml.html
+++ b/testhtml.html
@@ -12,37 +12,28 @@
     <div class="
     flex flex-col justify-evenly items-center
     h-[85vh]
-    bg-zinc-800
+    bg-red-300
     w-[100vw]
     ">
-        <p id=".sizeScore" class="
-        bg-green-300
-        text-red-700
-        text-3xl
-        p-5
-        ">
-            size at death:
-            <br>
-
-        </p>
         
         <p class="
         bg-green-300
-        text-red-700
-        text-3xl
-        p-5
+        text-red-500
+        text-5xl
+        p-10
+        px-50
         ">
-            you lose
+            you win
         </p>
 
         <p class="
         timeScore
         bg-green-300
-        text-red-700
+        text-red-500
         text-3xl
         p-5
         ">
-            time
+            time:
         </p>
 
     </div>
