--- a/field.html
+++ b/field.html
@@ -35,7 +35,7 @@ flex flex-col justify-evenly items-center
     bg-red-200
     ">
         
-        <div class="
+        <div id="info" class="
         flex flex-row justify-between
         w-8/10
         items-center
@@ -69,7 +69,7 @@ flex flex-col justify-evenly items-center
             <div id="links" class="
             " >
 
-                <a href="" id="settings">
+                <a href="./settings.html" id="settings">
                     <i class="fa-solid fa-gear 
                     text-[30px] md:text-[45px]
                     mx-[20px]" id="settingIcon"></i>
@@ -88,7 +88,7 @@ flex flex-col justify-evenly items-center
         </div>
 
     </div>
-
+    <audio src="./audio/music.mp3" preload="auto" id="music"></audio>
     <div id="section" href="./field.html" class="
     outline-2
     bg-red-50
@@ -243,5 +243,6 @@ flex flex-col justify-evenly items-center
 
             })
     </script>
+    <script src="settings.js"></script>
 </body>
 </html>
