--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ flex flex-col justify-evenly items-center
             snake
         </div>
         
-        <div class="
+        <div id="info" class="
         flex flex-row justify-between
         w-8/10
         items-center
