--- a/settings.html
+++ b/settings.html
@@ -30,7 +30,7 @@
     </section>
     <section id="links">
         <a href="./index.html"><img src="https://www.svgrepo.com/show/22031/home-icon-silhouette.svg" width="50px" alt="Home"></a>
-        <a href=""><img src="https://www.svgrepo.com/show/447653/gaming.svg" width="50px" alt="Game"></a>
+        <a href="./field.html"><img src="https://www.svgrepo.com/show/447653/gaming.svg" width="50px" alt="Game"></a>
     </section>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="crossorigin="anonymous"></script>
     <script src="settings.js"></script>
