--- a/field.html
+++ b/field.html
@@ -282,6 +282,9 @@
 
                 }
                 
+                if($(".apple").parent().attr("class") == headLoc){
+                  console.log("Apple")
+                } 
 
             // declaring button varibles
                 let size = 15
