--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ flex flex-col justify-evenly items-center
         <div id="title" class="
         text-4xl md:text-6xl
         ">
-            snake
+            Snake
         </div>
         
         <div id="info" class="
@@ -60,17 +60,17 @@ flex flex-col justify-evenly items-center
             ">
                 <h2 class="
                 text-lg md:text-2xl
-                ">high score</h2>
+                ">High score:</h2>
                 <p>
                     <!-- use jQuery to write out the information saved by Robert -->
-                    time: 
+                    Time: 
                     <span id="timeScore">
 
                     </span>
 
                     <br>
 
-                    size:
+                    Size:
                     <span id="sizeScore">
 
                     </span>
@@ -115,7 +115,7 @@ flex flex-col justify-evenly items-center
         <span class="
         text-5xl
         text-green-800
-        ">start</span>
+        ">Start</span>
     </a>
     <audio src="./audio/music.mp3" preload="auto" id="music"></audio>
 
