--- a/field.html
+++ b/field.html
@@ -738,7 +738,7 @@ if(gameOver(newHeadLoc, headLoc))
             {
                 console.log("working")
                
-                    $('#section').html(`<div class="flex flex-col justify-evenly items-center h-[85vh] bg-zinc-800 w-[100vw]"><p id=".sizeScore" class="bg-green-300 text-red-700 text-3xl p-5">size at death:<br></p><p class="bg-green-300 text-red-700 text-3xl p-5">you lose</p><p class="timeScore bg-green-300 text-red-700 text-3xl p-5">time</p></div>`)
+                    $('#section').html(`<div class="flex flex-col justify-evenly items-center h-[85vh] bg-zinc-800 w-[100vw]"><p id=".sizeScore" class="bg-green-300 text-red-700 text-3xl p-5">Size at death:<br></p><p class="bg-green-300 text-red-700 text-3xl p-5">You lose</p><p class="timeScore bg-green-300 text-red-700 text-3xl p-5">time</p></div>`)
 
                     
 
