Got rid of different grid sizes

--- a/index.html
+++ b/index.html
@@ -49,35 +49,12 @@ flex flex-col justify-evenly items-center
         </div>
         
         <div id="info" class="
-        flex flex-row justify-between
+        flex flex-row justify-center
         w-8/10
         items-center
         rounded-md
         bg-red-200
         ">
-
-            <div id="score" class="
-            text-l md:text-xl
-            ">
-                <h2 class="
-                text-lg md:text-2xl
-                ">High score:</h2>
-                <p>
-                    <!-- use jQuery to write out the information saved by Robert -->
-                    Time: 
-                    <span id="timeScore">
-
-                    </span>
-
-                    <br>
-
-                    Size:
-                    <span id="sizeScore">
-
-                    </span>
-
-                </p>
-            </div>
 
             <div id="links" class="
             " >
