--- a/settings.html
+++ b/settings.html
@@ -12,9 +12,9 @@
         <h2>Color Selection:</h2>
         <!--Toggles between colors for both the snake and background color-->
         <div id="container">
-            <p>Reddish Pink background with light blue snake:<input type="radio" id="colorsel1" name="colorselect" value="1"><br></p>
-            <p>Blue background with black snake:<input type="radio" id="colorsel2" name="colorselect" value="2"><br></p>
-            <p>Orange background with blue snake:<input type="radio" id="colorsel3" name="colorselect" value="3"><br></p>
+            <p>Reddish Pink background:<input type="radio" id="colorsel1" name="colorselect" value="1"><br></p>
+            <p>Blue background:<input type="radio" id="colorsel2" name="colorselect" value="2"><br></p>
+            <p>Orange background:<input type="radio" id="colorsel3" name="colorselect" value="3"><br></p>
         </div>
     </section>
     <section id="volume">
