--- a/settings.html
+++ b/settings.html
@@ -18,16 +18,12 @@
         </div>
     </section>
     <section id="volume">
-        <h2>Volume:</h2>
-        <h3>Music</h3>
-        <!--Toggles music-->
-        <p>On:<input type="radio" id="musicon" name="music" value="on1"></p>
-        <p>Off:<input type="radio" id="musicoff" name="music" value="off1"></p>
-        <audio src="./audio/music.mp3" preload="auto" id="music"></audio>
-        <h3>Sound Effects</h3>
-        <!--Toggles other sound effects-->
-        <p>On:<input type="radio" id="soundon" name="sound" value="on2"></p>
-        <p>Off:<input type="radio" id="soundoff" name="sound" value="off2"></p>
+        <h2>Music:</h2>
+        <div id="container">
+            <p>On:<input type="radio" id="musicon" name="music" value="on1"></p>
+            <p>Off:<input type="radio" id="musicoff" name="music" value="off1"></p>
+            <audio src="./audio/music.mp3" preload="auto" id="music"></audio>
+        </div>
     </section>
     <section id="links">
         <a href="./index.html"><img src="https://www.svgrepo.com/show/22031/home-icon-silhouette.svg" width="75px" alt="Home"></a>
